welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value num
	for (n <- 0 to num.length-1)
                       ^